@@ -1,3 +1,10 @@
+Mon Nov  1 11:45:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/Coherent_Changes_Guard.h:
+        * connectors/dds4ccm/impl/ndds/DDSDomainParticipantListener.h:
+        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.h:
+          Corrected export and singleton macros.
+
 Mon Nov  1 11:40:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/Coherent_Changes_Guard.h:
